@@ -87,6 +87,9 @@ void read_keys_file() {
                 } else if(strcmp(dummy3, "rotate_mode") == 0) {
                     keys[keycount].myfunction = rotate_mode;
                     keys[keycount].arg.i = atoi(strsep(&dummy2, ";"));
+                } else if(strcmp(dummy3, "terminate") == 0) {
+                    keys[keycount].myfunction = terminate;
+                    keys[keycount].arg.i = atoi(strsep(&dummy2, ";"));
                 } else if(strcmp(dummy3, "quit") == 0) keys[keycount].myfunction = quit;
                 else if(strcmp(dummy3, "next_win") == 0) keys[keycount].myfunction = next_win;
                 else if(strcmp(dummy3, "prev_win") == 0) keys[keycount].myfunction = prev_win;
