@@ -4,6 +4,11 @@
 # Set external commands ; use with spawn
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
 CMD xtermcmd;xterm;NULL;
+# To quit the window manager and shutdown or reboot
+# "shutdowncmd" and "rebootcmd" are hardcoded so case matters
+# use with terminate(see bottom of this file)
+CMD shutdowncmd;sudo;shutdown;-P;now;NULL;
+CMD rebootcmd;sudo;reboot;NULL;
 #
 KEY Alt;1;change_desktop;0;
 KEY Alt;2;change_desktop;1;
@@ -86,4 +91,8 @@ KEY Super;t;spawn;xtermcmd;
 #
 # Shortcut to exit the window manager
 KEY CtrlAlt;q;quit;
+# Close any open windows and reboot or shutdown
+# 1 to shutdown, 2 to reboot
+KEY CtrlAlt;s;terminate;1;
+KEY CtrlAlt;r;terminate;2;
 #
